# QuantPerformancePortfolio

./: .gitignore  Cargo.toml  LICENSE  README.md  SETUP.md  pyproject.toml
case_studies/01_polars_vs_pandas/: .gitignore  BENCHMARKS.md  LICENSE  README.md  STRUCTURE.md  TESTS.md  pyproject.toml  pytest.ini  utils.py
case_studies/01_polars_vs_pandas/docs/: BENCHMARKS.md  README.md  STRUCTURE.md  TESTS.md
case_studies/01_polars_vs_pandas/optimized/: backtest.py
case_studies/01_polars_vs_pandas/suboptimal/: backtest.py
case_studies/01_polars_vs_pandas/tests/: test_benchmark.py  test_correctness.py  test_edge_cases.py
case_studies/01_polars_vs_pandas/tools/: __init__.py  exceptions.py  utils.py
case_studies/02_hft_orderbook_rust/hft_optimization/: BENCHMARKS.md  BENCHMARK_RESULTS.md  Cargo.toml  OPTIMIZATION_RESULTS.md  PERFORMANCE_SUMMARY.md  README.md  README_OPTIMISATION.md  STRUCTURE.md  TESTS.md  UNIT_TEST_REPORT.md  bench_results.txt  bench_results_final.txt
case_studies/02_hft_orderbook_rust/hft_optimization/benches/: README.md  optimized_vs_suboptimal.rs  orderbook_update.rs
case_studies/02_hft_orderbook_rust/hft_optimization/docs/: BENCHMARKS.md  README.md  STRUCTURE.md  TESTS.md
case_studies/02_hft_orderbook_rust/hft_optimization/src/: lib.rs  main.rs
case_studies/02_hft_orderbook_rust/hft_optimization/src/common/: messages.rs  mod.rs  types.rs
case_studies/02_hft_orderbook_rust/hft_optimization/src/optimized/: book.rs  mod.rs
case_studies/02_hft_orderbook_rust/hft_optimization/src/suboptimal/: book.rs  messages.rs  mod.rs  simulator.rs  types.rs
case_studies/03_fft_autocorrelation/: BENCHMARKS.md  README.md  STRUCTURE.md  TESTS.md  pyproject.toml  quick_benchmark.py  run_benchmark.py
case_studies/03_fft_autocorrelation/docs/: BENCHMARKS.md  README.md  STRUCTURE.md  TESTS.md
case_studies/03_fft_autocorrelation/optimized/: Cargo.toml  OPTIMIZATION_SUMMARY.md  README.md  pyproject.toml
case_studies/03_fft_autocorrelation/optimized/examples/: example.py
case_studies/03_fft_autocorrelation/optimized/src/: lib.rs
case_studies/03_fft_autocorrelation/suboptimal/: processing.py
case_studies/03_fft_autocorrelation/tests/: README.md  __init__.py  pytest.ini  test_benchmark.py  test_correctness.py  test_unit.py
case_studies/04_gpu_monte_carlo/: BENCHMARKS.md  README.md  REORGANIZATION_SUMMARY.txt  STRUCTURE.md  TESTS.md  pyproject.toml  utils.py
case_studies/04_gpu_monte_carlo/docs/: BENCHMARKS.md  CORRECTIONS_APPLIED.md  PROJECT_ORGANIZATION.md  README.md  STRUCTURE.md  TESTS.md
case_studies/04_gpu_monte_carlo/optimized/: pricing.py
case_studies/04_gpu_monte_carlo/scripts/: validate_fixes.py
case_studies/04_gpu_monte_carlo/suboptimal/: pricing.py
case_studies/04_gpu_monte_carlo/tests/: benchmark_results.txt  generate_performance_report.py  performance_report.txt  run_all_tests_and_benchmarks.py  run_asian_validation.py  test_asian_option_benchmark.py  test_asian_option_benchmark_zero_copy.py  test_asian_option_correctness.py  test_benchmark.py  test_benchmark_gpu.py  test_benchmark_new.py  test_correctness.py  test_correctness_gpu.py  test_results.txt
