[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-performance-portfolio"
version = "1.0.0"
description = "Quantitative finance performance optimization portfolio demonstrating 2x to 550x speedups"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "quantitative-finance",
    "performance-optimization",
    "high-frequency-trading",
    "gpu-computing",
    "rust",
    "python",
    "monte-carlo",
    "backtesting",
    "fft",
    "orderbook"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies used across multiple case studies
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
# Case Study 01: Polars vs Pandas
polars = [
    "polars>=0.19.0",
    "exchange-calendars>=4.5.0",
]

# Case Study 03: FFT Autocorrelation (Python side)
fft = [
    "scipy>=1.10.0",
    "maturin>=1.0.0",  # For building Rust extensions
]

# Case Study 04: GPU Monte Carlo (CUDA 12.x)
gpu-cuda12 = [
    "cupy-cuda12x>=12.0.0",
]

# Case Study 04: GPU Monte Carlo (CUDA 11.x)
gpu-cuda11 = [
    "cupy-cuda11x>=11.0.0",
]

# Testing dependencies
test = [
    "pytest>=7.4.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.1.0",
]

# Development dependencies
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

# All dependencies for complete installation
all = [
    "quant-performance-portfolio[polars,fft,test,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/quant-performance-portfolio"
Repository = "https://github.com/yourusername/quant-performance-portfolio"
Documentation = "https://github.com/yourusername/quant-performance-portfolio#readme"
"Bug Tracker" = "https://github.com/yourusername/quant-performance-portfolio/issues"

[tool.setuptools]
packages = []  # This is a portfolio/workspace project, not a library

[tool.pytest.ini_options]
testpaths = ["case_studies"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "benchmark: performance benchmark tests",
    "correctness: correctness validation tests",
    "gpu: tests requiring GPU/CUDA",
    "slow: slow-running tests",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # Default excludes
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # Custom excludes
  | target
  | \.pytest_cache
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function calls in argument defaults
]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "target",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Allow untyped defs for portfolio code
ignore_missing_imports = true
exclude = [
    "target/",
    ".venv/",
    "build/",
]

# Type checking for specific packages
[[tool.mypy.overrides]]
module = [
    "cupy.*",
    "polars.*",
    "exchange_calendars.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["case_studies"]
omit = [
    "*/tests/*",
    "*/.venv/*",
    "*/target/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
