[tool.poetry]
name = "polars-vs-pandas-backtest"
version = "0.1.0"
description = "Case study comparing Pandas vs Polars performance for quantitative backtest"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
numpy = "^1.24.0"
exchange-calendars = "^4.5.0"
polars = "^0.19.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
