[tool.poetry]
name = "polars-vs-pandas-backtest"
version = "0.1.0"
description = "Case study comparing Pandas vs Polars performance for quantitative backtest"
authors = ["Tiago Ferreira Da Silva - frenchquant125@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
polars = "^1.34.0"
pandas = "^2.3.3"
numpy = "^2.3.4"
exchange-calendars = "^4.11.2"
pyarrow = "^22.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
