[tool.poetry]
name = "polars-vs-pandas-backtest"
version = "0.1.0"
description = "Case study comparing Pandas vs Polars performance for quantitative backtest"
authors = ["Ferreira Da Silva - frenchquant - frenchquant125@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
polars = "^1.34.0"
pandas = "^2.3.3"
numpy = "^2.3.4"
exchange-calendars = "^4.11.2"
pyarrow = "^22.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.venv
  | __pycache__
  | \.pytest_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
