[tool.poetry]
name = "fft-autocorrelation"
version = "0.1.0"
description = "FFT Autocorrelation case study comparing Python (SciPy) vs Rust+PyO3"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.20.0"
pandas = "^1.3.0"
scipy = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-benchmark = "^4.0.0"
maturin = "^1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
