[tool.poetry]
name = "fft-autocorrelation"
version = "0.1.0"
description = "FFT Autocorrelation case study comparing Python (SciPy) vs Rust+PyO3"
authors = ["Ferreira Da Silva - frenchquant - frenchquant125@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = "^2.3.4"
pandas = "^2.3.3"
pytest = "^8.4.2"
scipy = "^1.16.3"
maturin = "^1.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
