[project]
name = "gpu-monte-carlo"
version = "1.0.0"
description = "GPU-accelerated Monte Carlo simulation for option pricing achieving 10-100x speedup"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Quantitative Developer", email = "quant@example.com" }
]
keywords = [
    "gpu",
    "cuda",
    "monte-carlo",
    "option-pricing",
    "quantitative-finance",
    "high-performance-computing",
    "cupy",
    "numpy",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
# GPU acceleration (choose based on CUDA version)
gpu-cuda12 = [
    "cupy-cuda12x>=12.0.0",
]
gpu-cuda11 = [
    "cupy-cuda11x>=11.0.0",
]

# Testing dependencies
test = [
    "pytest>=7.4.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.1.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

# Memory profiling (optional)
profiling = [
    "psutil>=5.9.0",
    "memory-profiler>=0.61.0",
]

# All dependencies
all = [
    "cupy-cuda12x>=12.0.0",
    "pytest>=7.4.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.1.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/quant-performance-portfolio"
Documentation = "https://github.com/yourusername/quant-performance-portfolio/tree/main/case_studies/04_gpu_monte_carlo"
Repository = "https://github.com/yourusername/quant-performance-portfolio"
Issues = "https://github.com/yourusername/quant-performance-portfolio/issues"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["suboptimal", "optimized"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-v",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "gpu: tests that require GPU/CUDA (skipped if not available)",
    "slow: slow-running tests (minutes)",
    "benchmark: performance benchmark tests",
]

[tool.coverage.run]
source = ["suboptimal", "optimized"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "cupy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/*" = ["B018"]      # useless expression in tests
