[project]
name = "04-gpu-monte-carlo"
version = "0.1.0"
description = "This project demonstrates the power of **GPU-accelerated computing** for Monte Carlo simulations in quantitative finance. By leveraging **NVIDIA CUDA** through **CuPy**, we achieve **10-100x speedup** over CPU implementations for option pricing simulations."
authors = [
    {name = "Tiago Ferreira Da Silva - frenchquant",email = "frenchquant125@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
