[package]
name = "hft_optimisation"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"
adler = "1.0"
plotters = "0.3.7"
itoa = "1.0"

[features]
no_checksum = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "hft_server"
path = "src/main.rs"

[[bin]]
name = "plot_orderbook"
path = "src/bin/plot_orderbook.rs"

[[bench]]
name = "orderbook_update"
harness = false

[[bench]]
name = "optimized_vs_suboptimal"
harness = false

[lib]
name = "hft_optimisation"
path = "src/lib.rs"
