[package]
name = "fft_autocorr"
version = "0.1.0"
edition = "2021"

[lib]
name = "fft_autocorr"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module"] }
numpy = "0.22.0"
ndarray = "0.16.1"
realfft = "3.3.0"
num-complex = "0.4"
once_cell = "1.21"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[workspace]
# Empty workspace to prevent inheriting from parent workspace
